{
  "version": 4,
  "terraform_version": "1.13.5",
  "serial": 128,
  "lineage": "5273202f-147a-c136-d9b1-13893426fe46",
  "resources": [
    {
      "module": "module.argo_cd",
      "mode": "data",
      "type": "kubernetes_service",
      "name": "argocd_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "argocd/argocd-server",
            "metadata": [
              {
                "annotations": {
                  "meta.helm.sh/release-name": "argocd",
                  "meta.helm.sh/release-namespace": "argocd"
                },
                "generation": 0,
                "labels": {
                  "app.kubernetes.io/component": "server",
                  "app.kubernetes.io/instance": "argocd",
                  "app.kubernetes.io/managed-by": "Helm",
                  "app.kubernetes.io/name": "argocd-server",
                  "app.kubernetes.io/part-of": "argocd",
                  "app.kubernetes.io/version": "v2.12.6",
                  "helm.sh/chart": "argo-cd-7.6.12"
                },
                "name": "argocd-server",
                "namespace": "argocd",
                "resource_version": "55520",
                "uid": "19e97dee-3a15-40f5-835c-bd019730d93e"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "172.20.179.122",
                "cluster_ips": [
                  "172.20.179.122"
                ],
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "name": "http",
                    "node_port": 0,
                    "port": 80,
                    "protocol": "TCP",
                    "target_port": "8080"
                  },
                  {
                    "name": "https",
                    "node_port": 0,
                    "port": 443,
                    "protocol": "TCP",
                    "target_port": "8080"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app.kubernetes.io/instance": "argocd",
                  "app.kubernetes.io/name": "argocd-server"
                },
                "session_affinity": "None",
                "type": "ClusterIP"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ]
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.argo_cd",
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "argocd",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "argocd",
            "metadata": [
              {
                "generation": 0,
                "name": "argocd",
                "resource_version": "55366",
                "uid": "125e0f10-11c5-4cc2-be52-f858693a23c0"
              }
            ],
            "wait_for_default_service_account": false
          },
          "identity_schema_version": 1,
          "identity": {
            "api_version": "v1",
            "kind": "Namespace",
            "name": "argocd"
          },
          "dependencies": [
            "data.aws_eks_cluster.this",
            "data.aws_eks_cluster_auth.this",
            "module.eks.aws_eks_addon.aws_ebs_csi_driver",
            "module.eks.aws_eks_cluster.this",
            "module.eks.aws_eks_node_group.this",
            "module.eks.aws_iam_openid_connect_provider.oidc",
            "module.eks.aws_iam_role.cluster_role",
            "module.eks.aws_iam_role.ebs_csi_irsa_role",
            "module.eks.aws_iam_role.eks",
            "module.eks.aws_iam_role.node_role",
            "module.eks.aws_iam_role_policy_attachment.cluster_AmazonEKSClusterPolicy",
            "module.eks.aws_iam_role_policy_attachment.cluster_AmazonEKSVPCResourceController",
            "module.eks.aws_iam_role_policy_attachment.ebs_irsa_policy",
            "module.eks.aws_iam_role_policy_attachment.eks",
            "module.eks.aws_iam_role_policy_attachment.node_AmazonEC2ContainerRegistryReadOnly",
            "module.eks.aws_iam_role_policy_attachment.node_AmazonEKSWorkerNodePolicy",
            "module.eks.aws_iam_role_policy_attachment.node_AmazonEKS_CNI_Policy",
            "module.eks.aws_security_group.cluster_sg",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:764520352358:security-group/sg-03706a0ef7c27efee",
            "description": "EKS cluster security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03706a0ef7c27efee",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "devops-final-mykola-dev-eks-cluster-sg",
            "name_prefix": "",
            "owner_id": "764520352358",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "devops-final-mykola-dev-eks-cluster-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "devops-final-mykola-dev-eks-cluster-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c38fee4013a228ac"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.jenkins",
      "mode": "data",
      "type": "kubernetes_service",
      "name": "jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "jenkins/jenkins",
            "metadata": [
              {
                "annotations": {
                  "meta.helm.sh/release-name": "jenkins",
                  "meta.helm.sh/release-namespace": "jenkins"
                },
                "generation": 0,
                "labels": {
                  "app.kubernetes.io/component": "jenkins-controller",
                  "app.kubernetes.io/instance": "jenkins",
                  "app.kubernetes.io/managed-by": "Helm",
                  "app.kubernetes.io/name": "jenkins",
                  "helm.sh/chart": "jenkins-5.5.7"
                },
                "name": "jenkins",
                "namespace": "jenkins",
                "resource_version": "52891",
                "uid": "47a40a7d-56b3-45a6-a7b7-b2559f5f62cd"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "172.20.129.220",
                "cluster_ips": [
                  "172.20.129.220"
                ],
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "name": "http",
                    "node_port": 0,
                    "port": 8080,
                    "protocol": "TCP",
                    "target_port": "8080"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app.kubernetes.io/component": "jenkins-controller",
                  "app.kubernetes.io/instance": "jenkins"
                },
                "session_affinity": "None",
                "type": "ClusterIP"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ]
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.jenkins",
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "jenkins",
            "metadata": [
              {
                "generation": 0,
                "name": "jenkins",
                "resource_version": "52867",
                "uid": "ec1a3011-c386-428a-ae9e-07089192d080"
              }
            ],
            "wait_for_default_service_account": false
          },
          "identity_schema_version": 1,
          "identity": {
            "api_version": "v1",
            "kind": "Namespace",
            "name": "jenkins"
          },
          "dependencies": [
            "data.aws_eks_cluster.this",
            "data.aws_eks_cluster_auth.this",
            "module.eks.aws_eks_addon.aws_ebs_csi_driver",
            "module.eks.aws_eks_cluster.this",
            "module.eks.aws_eks_node_group.this",
            "module.eks.aws_iam_openid_connect_provider.oidc",
            "module.eks.aws_iam_role.cluster_role",
            "module.eks.aws_iam_role.ebs_csi_irsa_role",
            "module.eks.aws_iam_role.eks",
            "module.eks.aws_iam_role.node_role",
            "module.eks.aws_iam_role_policy_attachment.cluster_AmazonEKSClusterPolicy",
            "module.eks.aws_iam_role_policy_attachment.cluster_AmazonEKSVPCResourceController",
            "module.eks.aws_iam_role_policy_attachment.ebs_irsa_policy",
            "module.eks.aws_iam_role_policy_attachment.eks",
            "module.eks.aws_iam_role_policy_attachment.node_AmazonEC2ContainerRegistryReadOnly",
            "module.eks.aws_iam_role_policy_attachment.node_AmazonEKSWorkerNodePolicy",
            "module.eks.aws_iam_role_policy_attachment.node_AmazonEKS_CNI_Policy",
            "module.eks.aws_security_group.cluster_sg",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.monitoring",
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "monitoring",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "monitoring",
            "metadata": [
              {
                "generation": 0,
                "name": "monitoring",
                "resource_version": "57007",
                "uid": "00966e02-68e7-44df-94a2-136daaff9bfc"
              }
            ],
            "wait_for_default_service_account": false
          },
          "identity_schema_version": 1,
          "identity": {
            "api_version": "v1",
            "kind": "Namespace",
            "name": "monitoring"
          },
          "dependencies": [
            "data.aws_eks_cluster.this",
            "data.aws_eks_cluster_auth.this",
            "module.eks.aws_eks_addon.aws_ebs_csi_driver",
            "module.eks.aws_eks_cluster.this",
            "module.eks.aws_eks_node_group.this",
            "module.eks.aws_iam_openid_connect_provider.oidc",
            "module.eks.aws_iam_role.cluster_role",
            "module.eks.aws_iam_role.ebs_csi_irsa_role",
            "module.eks.aws_iam_role.eks",
            "module.eks.aws_iam_role.node_role",
            "module.eks.aws_iam_role_policy_attachment.cluster_AmazonEKSClusterPolicy",
            "module.eks.aws_iam_role_policy_attachment.cluster_AmazonEKSVPCResourceController",
            "module.eks.aws_iam_role_policy_attachment.ebs_irsa_policy",
            "module.eks.aws_iam_role_policy_attachment.eks",
            "module.eks.aws_iam_role_policy_attachment.node_AmazonEC2ContainerRegistryReadOnly",
            "module.eks.aws_iam_role_policy_attachment.node_AmazonEKSWorkerNodePolicy",
            "module.eks.aws_iam_role_policy_attachment.node_AmazonEKS_CNI_Policy",
            "module.eks.aws_security_group.cluster_sg",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-047e9a2c48a0259de",
            "arn": "arn:aws:ec2:eu-central-1:764520352358:elastic-ip/eipalloc-047e9a2c48a0259de",
            "association_id": "eipassoc-0d7dc70bb17adb0cb",
            "domain": "vpc",
            "id": "eipalloc-047e9a2c48a0259de",
            "network_border_group": "eu-central-1",
            "network_interface": "eni-08a6e079cf61c9e33",
            "private_dns": "ip-10-0-1-143.eu-central-1.compute.internal",
            "private_ip": "10.0.1.143",
            "public_dns": "ec2-63-181-26-84.eu-central-1.compute.amazonaws.com",
            "public_ip": "63.181.26.84",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "devops-final-mykola-dev-nat-eip"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "devops-final-mykola-dev-nat-eip"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:764520352358:internet-gateway/igw-0ba30e899253eb5c8",
            "id": "igw-0ba30e899253eb5c8",
            "owner_id": "764520352358",
            "tags": {
              "Environment": "dev",
              "Name": "devops-final-mykola-dev-igw"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "devops-final-mykola-dev-igw"
            },
            "vpc_id": "vpc-0c38fee4013a228ac"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-047e9a2c48a0259de",
            "association_id": "eipassoc-0d7dc70bb17adb0cb",
            "connectivity_type": "public",
            "id": "nat-08d176f351d49bd8a",
            "network_interface_id": "eni-08a6e079cf61c9e33",
            "private_ip": "10.0.1.143",
            "public_ip": "63.181.26.84",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-05663aeebdc381b8a",
            "tags": {
              "Environment": "dev",
              "Name": "devops-final-mykola-dev-nat"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "devops-final-mykola-dev-nat"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:764520352358:route-table/rtb-002f1849fd98e1e5a",
            "id": "rtb-002f1849fd98e1e5a",
            "owner_id": "764520352358",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-08d176f351d49bd8a",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "devops-final-mykola-dev-private-rt"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "devops-final-mykola-dev-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c38fee4013a228ac"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:764520352358:route-table/rtb-0ff1950c53cb87d09",
            "id": "rtb-0ff1950c53cb87d09",
            "owner_id": "764520352358",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ba30e899253eb5c8",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "devops-final-mykola-dev-public-rt"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "devops-final-mykola-dev-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c38fee4013a228ac"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0aa2dac4c57aa19dd",
            "route_table_id": "rtb-002f1849fd98e1e5a",
            "subnet_id": "subnet-0001e1d3d2d4966da"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01659dec33144a98d",
            "route_table_id": "rtb-002f1849fd98e1e5a",
            "subnet_id": "subnet-00844d30bd3aeb8a4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-064251c9275df1e75",
            "route_table_id": "rtb-0ff1950c53cb87d09",
            "subnet_id": "subnet-05663aeebdc381b8a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b0d1e5c186b6695d",
            "route_table_id": "rtb-0ff1950c53cb87d09",
            "subnet_id": "subnet-01f46afdc6899a465"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:764520352358:subnet/subnet-0001e1d3d2d4966da",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0001e1d3d2d4966da",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "764520352358",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "devops-final-mykola-dev-private-1",
              "Tier": "private"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "devops-final-mykola-dev-private-1",
              "Tier": "private"
            },
            "vpc_id": "vpc-0c38fee4013a228ac"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:764520352358:subnet/subnet-00844d30bd3aeb8a4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00844d30bd3aeb8a4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "764520352358",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "devops-final-mykola-dev-private-2",
              "Tier": "private"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "devops-final-mykola-dev-private-2",
              "Tier": "private"
            },
            "vpc_id": "vpc-0c38fee4013a228ac"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:764520352358:subnet/subnet-05663aeebdc381b8a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05663aeebdc381b8a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "764520352358",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "devops-final-mykola-dev-public-1",
              "Tier": "public"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "devops-final-mykola-dev-public-1",
              "Tier": "public"
            },
            "vpc_id": "vpc-0c38fee4013a228ac"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:764520352358:subnet/subnet-01f46afdc6899a465",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01f46afdc6899a465",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "764520352358",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "devops-final-mykola-dev-public-2",
              "Tier": "public"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "devops-final-mykola-dev-public-2",
              "Tier": "public"
            },
            "vpc_id": "vpc-0c38fee4013a228ac"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:764520352358:vpc/vpc-0c38fee4013a228ac",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-064c8bc119912ec5e",
            "default_route_table_id": "rtb-0856d78206dfabbe8",
            "default_security_group_id": "sg-0144b9d3e74889a84",
            "dhcp_options_id": "dopt-03bded390e336c725",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c38fee4013a228ac",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0856d78206dfabbe8",
            "owner_id": "764520352358",
            "tags": {
              "Environment": "dev",
              "Name": "devops-final-mykola-dev-vpc"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "devops-final-mykola-dev-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}